--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
+        <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
         <ul class="nav-list list">
           <li class="nav-list-item">
             <a href="./index.html" class="link current">Студія</a>
@@ -32,9 +30,7 @@
       </nav>
       <ul class="contact-list list">
         <li class="contact-list-item">
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li class="contact-list-item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
@@ -55,15 +51,13 @@
           <li>
             <h3 class="speciality-list-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="speciality-description">
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
             </p>
           </li>
           <li>
             <h3 class="speciality-list-title title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="speciality-description">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
             </p>
           </li>
           <li>
@@ -75,8 +69,7 @@
           <li>
             <h3 class="speciality-list-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="speciality-description">
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
             </p>
           </li>
         </ul>
@@ -153,9 +146,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
+      <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
       <address class="address">
         <ul class="address-list list">
           <li class="address-item">
@@ -164,9 +155,7 @@
             >
           </li>
           <li class="contact-list-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
           <li class="contact-list-item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
