--- a/portfolio.html
+++ b/portfolio.html
@@ -17,9 +17,7 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo"
-          >Web<span class="logo-header">Studio</span></a
-        >
+        <a href="./index.html" class="logo">Web<span class="logo-header">Studio</span></a>
         <ul class="nav-list list">
           <li class="nav-list-item">
             <a href="./index.html" class="link">Студія</a>
@@ -32,9 +30,7 @@
       </nav>
       <ul class="contact-list list">
         <li class="contact-list-item">
-          <a href="mailto:info@devstudio.com" class="link"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         </li>
         <li class="contact-list-item">
           <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
@@ -56,87 +52,47 @@
         <h1 hidden>Портфоліо</h1>
         <ul class="project-list list">
           <li class="project-item">
-            <img
-              src="./images/portfolio/img1.jpeg"
-              alt="Портфоліо фото 1"
-              width="370"
-            />
+            <img src="./images/portfolio/img1.jpeg" alt="Портфоліо фото 1" width="370" />
             <h2 class="title">Технокряк</h2>
             <p class="project-example">Веб-сайт</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img2.jpeg"
-              alt="Портфоліо фото 2"
-              width="370"
-            />
-            <h2 class="title">
-              Постер <span lang="en">New Orlean vs Golden Star</span>
-            </h2>
+            <img src="./images/portfolio/img2.jpeg" alt="Портфоліо фото 2" width="370" />
+            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p class="project-example">Дизайн</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img3.jpeg"
-              alt="Портфоліо фото 3"
-              width="370"
-            />
+            <img src="./images/portfolio/img3.jpeg" alt="Портфоліо фото 3" width="370" />
             <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
             <p class="project-example">Додаток</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img4.jpeg"
-              alt="Портфоліо фото 4"
-              width="370"
-            />
+            <img src="./images/portfolio/img4.jpeg" alt="Портфоліо фото 4" width="370" />
             <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
             <p class="project-example">Маркетинг</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img5.jpeg"
-              alt="Портфоліо фото 5"
-              width="370"
-            />
+            <img src="./images/portfolio/img5.jpeg" alt="Портфоліо фото 5" width="370" />
             <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
             <p class="project-example">Додаток</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img6.jpeg"
-              alt="Портфоліо фото 6"
-              width="370"
-            />
+            <img src="./images/portfolio/img6.jpeg" alt="Портфоліо фото 6" width="370" />
             <h2 class="title" lang="en">Inspiration has no Borders</h2>
             <p class="project-example">Веб-сайт</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img7.jpeg"
-              alt="Портфоліо фото 7"
-              width="370"
-            />
-            <h2 class="title">
-              Видання <span lang="en">Limited Edition</span>
-            </h2>
+            <img src="./images/portfolio/img7.jpeg" alt="Портфоліо фото 7" width="370" />
+            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
             <p class="project-example">Дизайн</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img8.jpeg"
-              alt="Портфоліо фото 8"
-              width="370"
-            />
+            <img src="./images/portfolio/img8.jpeg" alt="Портфоліо фото 8" width="370" />
             <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
             <p class="project-example">Маркетинг</p>
           </li>
           <li class="project-item">
-            <img
-              src="./images/portfolio/img9.jpeg"
-              alt="Портфоліо фото 9"
-              width="370"
-            />
+            <img src="./images/portfolio/img9.jpeg" alt="Портфоліо фото 9" width="370" />
             <h2 class="title" lang="en">Growing Business</h2>
             <p class="project-example">Додаток</p>
           </li>
@@ -145,9 +101,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
-        >Web<span class="logo-footer">Studio</span></a
-      >
+      <a href="./index.html" class="logo">Web<span class="logo-footer">Studio</span></a>
       <address class="address">
         <ul class="address-list list">
           <li class="address-item">
@@ -156,9 +110,7 @@
             >
           </li>
           <li class="contact-list-item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
           </li>
           <li class="contact-list-item">
             <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
